trying to make the header content look responsive

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </nav>
       <!-- Banner Section -->
-      <section class="relative flex lg:grid flex-col lg:flex-none ">
+      <section class="relative flex flex-col lg:grid gap-4">
         <div>
           <div class="carousel w-full h-[200px] lg:h-[550px]">
             <!-- Slider 1 -->
@@ -130,8 +130,9 @@
           </div>
         </div>
         <!-- Meet all hero section -->
-        <div class="relative lg:absolute">
-
+        <div class="relative w-ful lg:w-auto lg:absolute lg:bottom-10 rounded-2xl lg:right-8 p-8 bg-black">
+            <h2 class="text-white text-lg lg:text-2xl font-extrabold">Meet all the heroes from the field</h2>
+            <p class="mt-4 text-white w-full lg:w-[502px] text-[14px] lg:text-base font-medium  ">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
         </div>
       </section>
     </header>
