--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="navbar p-0 lg:p-0 bg-base-100 justify-center items-center">
           <div class="navbar-start">
             <div class="dropdown">
-              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <div tabindex="0" role="button" class="btn btn-ghost pl-0 lg:hidden">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="h-5 w-5"
@@ -132,7 +132,7 @@
         <!-- Meet all hero section -->
         <div class="relative w-ful lg:w-auto lg:absolute lg:bottom-10 rounded-2xl lg:right-8 p-8 bg-black">
             <h2 class="text-white text-lg lg:text-2xl font-extrabold">Meet all the heroes from the field</h2>
-            <p class="mt-4 text-white w-full lg:w-[502px] text-[14px] lg:text-base font-medium  ">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+            <p class="mt-4 text-white w-full lg:w-[502px] text-[14px] lg:text-base font-medium  ">Meet Hockey's Heroes: Legends on Ice! 🏒 Uncover the stories of the game's finest in our exclusive showcase. #HockeyHeroes</p>
         </div>
       </section>
     </header>
