--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
         font-family: "Manrope", sans-serif;
       }
     </style>
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="Images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="Images/site.webmanifest" />
   </head>
   <body class="font-manrope">
     <header class="px-4 lg:px-0 container mx-auto">
@@ -276,18 +295,30 @@
           <div
             class="hero h-auto lg:h-[338px] w-full rounded-xl flex-1"
             style="
-              background-image: linear-gradient(rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)),
+              background-image: linear-gradient(
+                  rgba(19, 19, 24, 0.5),
+                  rgba(19, 19, 24, 0.5)
+                ),
                 url('Images/2.png');
             "
           >
             <div class="hero-overlay"></div>
             <div class="hero-content text-center text-neutral-content relative">
               <div class="mt-1 lg:mt-24 text-center lg:text-left">
-                <h1 class=" text-xl lg:text-3xl font-extrabold text-[#fff]">Junior Program</h1>
-                <p class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#fff]  mb-5 lg:mb-6">
-                  Unleash the passion and potential in our Junior Program section, designed to nurture young talents and ignite a lifelong love for the game. Elevate skills, build camaraderie, and foster a foundation for future excellence.
+                <h1 class="text-xl lg:text-3xl font-extrabold text-[#fff]">
+                  Junior Program
+                </h1>
+                <p
+                  class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#fff] mb-5 lg:mb-6"
+                >
+                  Unleash the passion and potential in our Junior Program
+                  section, designed to nurture young talents and ignite a
+                  lifelong love for the game. Elevate skills, build camaraderie,
+                  and foster a foundation for future excellence.
                 </p>
-                <button class="btn bg-button border-0 text-white">Register Now!</button>
+                <button class="btn bg-button border-0 text-white">
+                  Register Now!
+                </button>
               </div>
             </div>
           </div>
@@ -295,18 +326,29 @@
           <div
             class="hero h-auto lg:h-[338px] w-full rounded-xl flex-1"
             style="
-              background-image: linear-gradient(rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)),
+              background-image: linear-gradient(
+                  rgba(19, 19, 24, 0.5),
+                  rgba(19, 19, 24, 0.5)
+                ),
                 url('Images/3.png');
             "
           >
             <div class="hero-overlay"></div>
-            <div class="hero-content text-center text-neutral-content relative ">
+            <div class="hero-content text-center text-neutral-content relative">
               <div class="mt-1 lg:mt-24 text-center lg:text-left">
-                <h1 class=" text-xl lg:text-3xl font-extrabold text-[#FFF ]">Teenager Program</h1>
-                <p class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#FFF]  mb-5 lg:mb-6">
-                  Elevate young talents in our Junior Program. Ignite teenage potential with skill-building and mentorship in our Teenager Program.
+                <h1 class="text-xl lg:text-3xl font-extrabold text-[#FFF ]">
+                  Teenager Program
+                </h1>
+                <p
+                  class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#FFF] mb-5 lg:mb-6"
+                >
+                  Elevate young talents in our Junior Program. Ignite teenage
+                  potential with skill-building and mentorship in our Teenager
+                  Program.
                 </p>
-                <button class="btn bg-button border-0 text-white">Register Now!</button>
+                <button class="btn bg-button border-0 text-white">
+                  Register Now!
+                </button>
               </div>
             </div>
           </div>
@@ -315,17 +357,31 @@
           <!-- Professional Programe -->
           <div
             class="hero w-full lg:w-full h-[244px] lg:h-[450px] rounded-2xl"
-            style="background-image: linear-gradient(rgba(19, 19, 24, 0.50), rgba(19, 19, 24, 0.50)),
-            url('Images/4.png');"
+            style="
+              background-image: linear-gradient(
+                  rgba(19, 19, 24, 0.5),
+                  rgba(19, 19, 24, 0.5)
+                ),
+                url('Images/4.png');
+            "
           >
-            <div class="hero-overlay "></div>
-            <div class="hero-content  text-neutral-content mr-0 lg:mr-[610px] ">
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-neutral-content mr-0 lg:mr-[610px]">
               <div class="mt-1 lg:mt-[150px] text-center lg:text-left">
-                <h1 class=" text-xl lg:text-3xl font-extrabold text-[#fff]">Professional Program</h1>
-                <p class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#fff]  mb-5 lg:mb-6 w-full lg:w-[520px] text-[#FFF]">
-                  Reach the pinnacle with our Professional Program – where expertise meets ambition. Elevate your game to new heights with specialized training, strategic insights, and a path to elite performance.
+                <h1 class="text-xl lg:text-3xl font-extrabold text-[#fff]">
+                  Professional Program
+                </h1>
+                <p
+                  class="mb-5 mt-3 lg:mt-4 text-sm lg:text-base text-[#fff] mb-5 lg:mb-6 w-full lg:w-[520px] text-[#FFF]"
+                >
+                  Reach the pinnacle with our Professional Program – where
+                  expertise meets ambition. Elevate your game to new heights
+                  with specialized training, strategic insights, and a path to
+                  elite performance.
                 </p>
-                <button class="btn bg-button border-0  text-white">Register Now!</button>
+                <button class="btn bg-button border-0 text-white">
+                  Register Now!
+                </button>
               </div>
             </div>
           </div>
