--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
       </section>
       <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
-      <section class="mt-6 lg:mt-8">
+      <section class="mt-6 lg:mt-8 mb-10 lg:mb-24">
         <div class="flex flex-col items-center justify-center mb-6 lg:mb-8">
           <h1 class="text-xl lg:text-4xl font-extrabold text-[#131318]">
             Program Sections
@@ -384,6 +384,118 @@
                 </button>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
+      <section class="mt-6 lg:mt-8">
+        <div class="flex flex-col justify-center items-center">
+          <h1 class="text-2xl lg:text-4xl mb-4 lg:mb-6 font-extrabold">
+            Our New Products
+          </h1>
+          <p class="mb-4 lg:mb-6">
+            Explore innovation in 'Our New Products' collection. Discover
+            cutting-edge solutions designed to elevate your lifestyle and
+            experiences.
+          </p>
+        </div>
+        <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
+        <div class="mt-6 lg:mt-12 grid grid-cols-1 lg:grid-cols-2 gap-6">
+          <!-- Cart 1 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/5.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
+          </div>
+          <!-- Cart 2 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/6.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div class=""> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
+          </div>
+          <!-- Cart 3 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/7.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div class=""> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
+          </div>
+          <!-- Cart 4 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/8.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div class=""> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
+          </div>
+          <!-- Cart 5 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/9.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div class=""> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
+          </div>
+          <!-- Cart 6 -->
+          <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
+
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/10.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+
+            <div class=""> 
+              <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
+              <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <div class="flex flex-col lg:flex-row gap-[16px]">
+                <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
+                <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
