product section responsive problem fixed

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           <!-- Cart 1 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/5.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/5.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
@@ -420,7 +420,7 @@
           <!-- Cart 2 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/6.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/6.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
@@ -436,7 +436,7 @@
           <!-- Cart 3 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/7.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto rounded-lg " style="background-image: url('Images/7.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
@@ -452,7 +452,7 @@
           <!-- Cart 4 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/8.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/8.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
@@ -468,7 +468,7 @@
           <!-- Cart 5 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/9.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/9.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
@@ -484,7 +484,7 @@
           <!-- Cart 6 -->
           <div class="p-6 h-full flex flex-col lg:flex-row border rounded-lg gap-6">
 
-            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/10.png'); background-repeat: no-repeat; background-size: cover; background-position: center;"></div>
+            <div class="w-full lg:w-[180px] h-[228px] lg:h-auto  rounded-lg" style="background-image: url('Images/10.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"></div>
 
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
